# MiniCompiler

./: CMakeLists.txt  README.md  test_in  test_out
output/: out
src/: AST_tree.cpp  AST_tree.hpp  Makefile  lex.yy.c  lexer.cpp  lexer.l  lexer_demo.l  out  parse.cpp  parse.hpp  parse.y
